--- a/.github/workflows/linting_test_deploy.yml
+++ b/.github/workflows/linting_test_deploy.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone Code
-        uses: sudosubin/git-clone-action@v1
+        uses: actions/checkout@v3
       - name: Install Dependencies
         run: npm install
       - name: Lint Code
