--- a/.github/workflows/linting_test_deploy.yml
+++ b/.github/workflows/linting_test_deploy.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Pull Code
-        run: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: Install Dependencies
         run: npm install
       - name: Deploy Code
