--- a/.github/workflows/linting_test_deploy.yml
+++ b/.github/workflows/linting_test_deploy.yml
@@ -14,6 +14,7 @@ jobs:
         run: npm run test
   
   deploy:
+    needs: pull-code
     runs-on: ubuntu-latest
     steps:
       - name: Pull Code
