--- a/.github/workflows/issues.yaml
+++ b/.github/workflows/issues.yaml
@@ -1,7 +1,7 @@
 name: Issue Details
 on: [workflow_dispatch, issues]
 jobs:
-  Issue Details:
+  issue-details:
     runs-on: ubuntu-latest
     steps:
       - name: echo Event Details
