--- a/.github/workflows/issues.yaml
+++ b/.github/workflows/issues.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo Event Details
-        run: echo ${{ toJSON(github.events) }}
+        run: echo "${{ toJSON(github.event) }}"
