--- a/.github/workflows/linting_test_deploy.yml
+++ b/.github/workflows/linting_test_deploy.yml
@@ -1,5 +1,9 @@
 name: Lint, Test and Deploy
-on: push
+on: 
+  push:
+    - branch:
+        - dev
+
 jobs:
   pull-code:
     runs-on: ubuntu-latest
